<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeamlessSpeakerRecognition</string>

    <string name="create_account">Create account</string>
    <string name="instant_recognition">Instant recognition</string>
    <string name="start_collecting_samples">Start collecting samples</string>
    <string name="stop_collecting_samples">Stop collecting samples</string>
    <string name="settings">Settings</string>

    <string name="bg_service_message">Collecting voice samples</string>

    <string name="toast_creating_profile">Creating profile. Please wait...</string>
    <string name="toast_starting_recognition">Recognition started. Please wait...</string>
    <string name="toast_profile_creation_success">Your profile was created successfully</string>
    <string name="toast_profile_creation_failed_user_exists">A user with this username already exists</string>
    <string name="toast_general_failure">Something went wrong</string>

    <string name="dialog_bg_service_title">Confirmation</string>
    <string name="dialog_bg_service_message">The application will be collecting samples periodically from %1$s to %2$s. You can change this timespan from the Settings page. \n\nAre you sure you want to proceed?</string>

    <string name="dialog_recognition_result_title">Recognition result</string>
    <string name="dialog_recognition_result_no_record">No record found. Please make sure you have created an account.</string>
    <string name="dialog_recognition_matched_user">Matched user: %s</string>
    <string name="dialog_recognition_likelihood">Likelihood: %d</string>

    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>

    <string name="create_account_instructions">Please choose a username and then press \"Record\" to record your voice.</string>
    <string name="username">Username</string>
    <string name="record">Record</string>

    <string name="dialog_recording_instructions">Please press \"Start recording\" and begin reading out loud the following text.</string>
    <string name="dialog_initial_speech">October arrived, spreading a damp chill over the grounds and into the castle. Madam Pomfrey, the nurse, was kept busy by a sudden spate of colds among the staff and students. Her Pepperup potion worked instantly, though it left the drinker smoking at the ears for several hours afterward. Ginny Weasley, who had been looking pale, was bullied into taking some by Percy. The steam pouring from under her vivid hair gave the impression that her whole head was on fire.</string>
    <string name="dialog_start_recording">Start recording</string>
    <string name="done">Done</string>

    <string name="recording_success">Your voice was recorded successfully.</string>
    <string name="recording_failure">The recording was canceled. Please try again.</string>

    <string name="title_activity_list">ListActivity</string>


    <string name="app_pref_collection">TIME SETTINGS</string>

    <string name="app_pref_morning_start">Application start time</string>
    <string name="app_pref_morning_start_summary">Specifies when the app starts collecting voice data from the user in the morning</string>

    <string name="app_pref_morning_stop">Application stop time</string>
    <string name="app_pref_morning_stop_summary">Specifies when the app stops collecting voice data from the user in the night</string>

    <string name="app_pref_battery">BATTERY SETTINGS</string>

    <string name="app_pref_hourly_frequency_collection">Hourly recording collecting frequency</string>
    <string name="app_pref_hourly_frequency_collection_summary">Determines how many times per hour the mic opens to collect voice data</string>

    <string name="app_pref_battery_threshold">Low battery Threshold</string>
    <string name="app_pref_battery_threshold_summary">Determines when service will stop due to low battery</string>

    <string name="app_pref_general">GENERAL SETTINGS</string>
    <string name="app_pref_activity_detection_duration"></string>
    <string name="app_pref_activity_detection_duration_summary">Adjust the duration of the recording used when deciding if there is voic activity or not </string>


    <!--Shared Preferences Keys -->
    <string name="sharedPreferencesStartTime">START_TIME_PREFERENCE_KEY</string>
    <string name="sharedPreferencesStopTime">STOP_TIME_PREFERENCE_KEY</string>
    <string name="sharedPreferencesMicOpeningFrequency">MIC_OPENING_FREQUENCY_PREFERENCE_KEY</string>
    <string name="sharedPreferencesBatteryThreshold">BATTERY_THRESHOLD_PREFERENCE_KEY</string>
    <string name="sharedPreferencesVoiceActivityDetectionDuration">VOICE_ACTIVITY_DETECTION_DURATION_PREFERENCE_KEY</string>

</resources>
