<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kth.ssr.activities.MainActivity">

    <Button
        android:id="@+id/create_account_button"
        android:text="@string/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/instant_recognition_button"
        android:text="@string/instant_recognition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/samples_collecting_button"
        android:text="@string/start_collecting_samples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/test"
        android:text="Test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
