<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    tools:context="com.kth.ssr.activities.MainActivity">


        <TextView
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_recording_instructions" />

        <TextView
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_initial_speech" />

        <Button
            android:id="@+id/record_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_start_recording" />

</LinearLayout>
